Run rails g model Champion to get controller, model and views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
+    <head>
+      <h1>LoL Champs</h1>
+      <nav>
+        <% if @current_user %>
+
+        <% else %>
+          <a href="/login">Login</a>
+          <a href="/register">Register</a>
+        <% end %>
+      </nav>
+    </head>
     <%= yield %>
+    <footer>
+    </footer>
   </body>
 </html>
