Add show template for champions

--- a/app/views/champions/show.html.erb
+++ b/app/views/champions/show.html.erb
@@ -10,8 +10,8 @@
       <tbody>
         <% @champion_facade.current_champ_stats.each do |stat, val| %>
         <tr>
-          <td><%= stat %>:</td>
-          <td><%= val %></td>
+          <td class="stat"><%= stat %>:</td>
+          <td class="val"><%= val %></td>
         </tr>
         <% end %>
       </tbody>
