--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,11 @@
 <%= form_for @user do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-  <%= f.submit %>
+  <p><%= f.label :name %>
+  <%= f.text_field :name %></p>
+  <p><%= f.label :email %>
+  <%= f.text_field :email %></p>
+  <p><%= f.label :password %>
+  <%= f.password_field :password %></p>
+  <p><%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %></p>
+  <p><%= f.submit %></p>
 <% end %>
