--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -3,7 +3,7 @@
   <% @champion_facade.favorites(current_user).each do |champ| %>
     <div class="champ">
       <h3><a href="/champions/<%= champ.name %>"><%= champ.name.titleize %>, <%= champ.title.titleize %></a></h3>
-      <p><a href="/my_favorites/<%= champ.id %>" data_method="delete">Unfavorite</a></p>
+      <p><a href="/favorites/<%= champ.name %>" data-method="delete">Unfavorite</a></p>
       <table class="stats">
         <tbody>
           <tr>
