--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <nav>
         <% if current_user %>
           <%= link_to "My Favorites", my_favorites_path %>
-          <%= link_to "Logout" %>
+          <%= link_to "Logout", logout_path %>
         <% else %>
           <%= link_to "Login", login_path %>
           <%= link_to "Register", register_path %>
